# mistral-vs-gemini-ocr

./: .gitignore  README.md  app.py  pyproject.toml
