[project]
name = "mistral-vs-gemini-ocr"
version = "0.1.0"
description = "Streamlit app to compare Mistral OCR and Gemini OCR."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mistralai>=1.0.0",
  "streamlit>=1.38.0",
  "google-genai>=0.6.0",
  "python-dotenv>=1.0.1",
  "watchdog>=6.0.0",
]

[tool.uv]
package = false
